# emunet

./: .gitignore  CLAUDE.md  Cargo.toml  EmuNet_v4.2_Protocol_Specification.docx  README.md
.github/workflows/: ci.yml  release.yml  security-audit.yml
bindings/: EventType.ts  HandleDescriptor.ts  HandleStatus.ts  LayoutConfig.ts  LayoutSection.ts  MemberRole.ts  MultisigEntry.ts  UpgradeManifest.ts
crates/ochra-crypto/: Cargo.toml
crates/ochra-crypto/src/: argon2id.rs  blake3.rs  chacha20.rs  ecies.rs  ed25519.rs  frost.rs  groth16.rs  lib.rs  pedersen.rs  poseidon.rs  voprf.rs  x25519.rs
crates/ochra-daemon/: Cargo.toml
crates/ochra-daemon/src/: config.rs  epoch.rs  events.rs  main.rs  rpc.rs
crates/ochra-daemon/src/commands/: diagnostics.rs  economy.rs  file_io.rs  identity.rs  mod.rs  network.rs  whisper.rs
crates/ochra-db/: Cargo.toml
crates/ochra-db/src/: lib.rs  migrations.rs  queries.rs  schema.rs
crates/ochra-db/src/queries/: contacts.rs  content.rs  settings.rs  spaces.rs  wallet.rs
crates/ochra-dht/: Cargo.toml
crates/ochra-dht/src/: bep44.rs  bootstrap.rs  chunking.rs  kademlia.rs  lib.rs
crates/ochra-frost/: Cargo.toml
crates/ochra-frost/src/: dkg.rs  lib.rs  quorum.rs  reshare.rs  roast.rs
crates/ochra-guardian/: Cargo.toml
crates/ochra-guardian/src/: dkg.rs  heartbeat.rs  lib.rs  recovery.rs  replacement.rs
crates/ochra-integration-tests/: Cargo.toml
crates/ochra-integration-tests/src/: lib.rs
crates/ochra-integration-tests/tests/: circuit_rotation.rs  full_loop.rs  network_bootstrap.rs  recovery_flow.rs  revenue_split.rs  whisper_e2e.rs
crates/ochra-invite/: Cargo.toml
crates/ochra-invite/src/: contact_exchange.rs  invite.rs  lib.rs  rendezvous.rs
crates/ochra-mint/: Cargo.toml
crates/ochra-mint/src/: cr_throttle.rs  groth16_mint.rs  lib.rs  voprf_mint.rs
crates/ochra-mls/: Cargo.toml
crates/ochra-mls/src/: group.rs  lib.rs  ratchet.rs  subgroup.rs
crates/ochra-nullifier/: Cargo.toml
crates/ochra-nullifier/src/: bloom.rs  gossip.rs  lib.rs  refund.rs
crates/ochra-onion/: Cargo.toml
crates/ochra-onion/src/: circuit.rs  cover.rs  lib.rs  nat.rs  relay.rs
crates/ochra-oracle/: Cargo.toml
crates/ochra-oracle/src/: circuit_breaker.rs  denomination.rs  lib.rs  stub.rs  twap.rs
crates/ochra-posrv/: Cargo.toml
crates/ochra-posrv/src/: lib.rs  scoring.rs  sybilguard.rs
crates/ochra-pow/: Cargo.toml
crates/ochra-pow/src/: argon2id_pow.rs  lib.rs  zk_por.rs
crates/ochra-revenue/: Cargo.toml
crates/ochra-revenue/src/: lib.rs  splits.rs
crates/ochra-spend/: Cargo.toml
crates/ochra-spend/src/: blind_receipt.rs  lib.rs  macro_tx.rs  micro.rs  transfer.rs
crates/ochra-storage/: Cargo.toml
crates/ochra-storage/src/: abr.rs  chunker.rs  earning.rs  lib.rs  reed_solomon.rs
crates/ochra-testvec/: Cargo.toml
crates/ochra-testvec/src/: main.rs
crates/ochra-transport/: Cargo.toml
crates/ochra-transport/src/: cbor.rs  lib.rs  messages.rs  quic.rs  sphinx.rs  wire.rs
crates/ochra-types/: Cargo.toml
crates/ochra-types/bindings/: AccessStatus.ts  ActivityEvent.ts  CatalogDiffRequest.ts  CatalogDiffResponse.ts  CircuitMetrics.ts  Contact.ts  ContactExchangeToken.ts  ContentEarning.ts  ContentManifest.ts  ContentReport.ts  CoverTrafficMetrics.ts  CoverTrafficMode.ts  DeprecationTombstone.ts  DownloadProgress.ts  DownloadState.ts  EarningsReport.ts  EarningsTrend.ts  EpochState.ts  Event.ts  FlushStats.ts  GenesisAllocation.ts  GenesisManifest.ts  GroupSettings.ts  GroupSummary.ts  GuardianStatus.ts  HandleInfo.ts  HandleRegistration.ts  IdentityProof.ts  IdentityReveal.ts  IntroPointEntry.ts  InviteInfo.ts  InvitePermission.ts  LogEntry.ts  LogLevel.ts  MpcSession.ts  MpcStatus.ts  NatStatus.ts  NotificationSettings.ts  NullifierGossipMsg.ts  OwnershipTransferRecord.ts  (+40 more)
crates/ochra-types/src/: content.rs  diagnostics.rs  events.rs  governance.rs  identity.rs  layout.rs  lib.rs  network.rs  space.rs  whisper.rs
crates/ochra-vys/: Cargo.toml
crates/ochra-vys/src/: accounting.rs  claims.rs  decay.rs  lib.rs
docs/: Ochra_v1_Engineering_Specification.md  Ochra_v5_5_Human_Interface_Specification.md  Ochra_v5_5_Unified_Technical_Specification.md
scripts/: seed-network.sh
tests/fixtures/: test_vectors.json
ui/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts
ui/src/: App.tsx  index.css
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: ipc_bridge.rs  main.rs
ui/src/components/layout/: Shell.tsx  Sidebar.tsx
ui/src/components/space/: ForumThread.tsx  GalleryMosaic.tsx  LayoutRenderer.tsx  LibraryList.tsx  NewsFeed.tsx  SpaceCard.tsx  StorefrontGrid.tsx
ui/src/components/ui/: Badge.tsx  BottomSheet.tsx  Button.tsx  Card.tsx  Modal.tsx  Slider.tsx  Toast.tsx
ui/src/hooks/: useBalance.ts  useEvents.ts  useIpc.ts  useSpaces.ts
ui/src/lib/: event-bus.ts  format.ts  rpc-client.ts  store.ts  terminology.ts
ui/src/pages/: Checkout.tsx  Contacts.tsx  Dashboard.tsx  Earn.tsx  Home.tsx  People.tsx  PurchaseLibrary.tsx  RecoverySetup.tsx  Seeds.tsx  SpaceBuilder.tsx  SpaceSettings.tsx  SpaceView.tsx  Whisper.tsx  WhisperChat.tsx  You.tsx
ui/src/pages/setup/: EarnSetup.tsx  MeetSeeds.tsx  Ready.tsx  Recovery.tsx  Welcome.tsx
