[package]
name = "ochra-invite"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
ochra-crypto = { path = "../ochra-crypto" }
ochra-types = { path = "../ochra-types" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
rand.workspace = true
base64.workspace = true
