[package]
name = "ochra-onion"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
ochra-crypto = { path = "../ochra-crypto" }
ochra-types = { path = "../ochra-types" }
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
rand.workspace = true
tokio.workspace = true
hex.workspace = true
