[package]
name = "ochra-posrv"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
ochra-crypto = { path = "../ochra-crypto" }
ochra-types = { path = "../ochra-types" }
thiserror.workspace = true
serde.workspace = true
hex.workspace = true
tracing.workspace = true
