[package]
name = "ochra-storage"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
ochra-crypto = { path = "../ochra-crypto" }
ochra-types = { path = "../ochra-types" }
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
rand.workspace = true
tokio.workspace = true
hex.workspace = true
serde_json.workspace = true
