[package]
name = "ochra-desktop"
version = "0.1.0"
edition = "2021"
description = "Ochra desktop application (Tauri v2)"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"

[features]
# This feature is used for production builds or when a dev server is not specified; DO NOT REMOVE
custom-protocol = ["tauri/custom-protocol"]
